--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "rimraf ./dist",
-    "coverage": "jest --config ./tests/jest.config.ts --coverage",
+    "coverage": "jest --config --coverage",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint . --ext .js,.ts",
     "postversion": "git push && git push --tags",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
-    "test": "jest --config ./tests/jest.config.ts",
-    "test:watch": "jest --config ./tests/jest.config.ts --watch",
+    "test": "jest --config",
+    "test:watch": "jest --config --watch",
     "version": "npm run format && git add -A src"
   },
   "engines": {
@@ -34,10 +34,10 @@
   },
   "homepage": "https://github.com/alexy4744/nestjs-nats-jetstream-transporter#readme",
   "devDependencies": {
+    "@golevelup/ts-jest": "^0.3.1",
     "@nestjs/common": "^7.6.14",
     "@nestjs/core": "^7.6.14",
     "@nestjs/microservices": "^7.6.17",
-    "@nestjs/platform-express": "^7.6.14",
     "@nestjs/testing": "^7.6.14",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.35",
@@ -46,7 +46,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "jest": "^26.6.3",
-    "nats": "^2.0.6",
+    "nats": "^2.0.8",
     "prettier": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -59,7 +59,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/microservices": "^7.6.17",
-    "nats": "^2.0.6",
+    "nats": "^2.0.8",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0"
   }
